centralizar Somos Incept

--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
           <div class="onda3" id="onda4"></div>
         </div>
         
-        <div class="vertical">
-          <div class="nocturne visit-card">
+        <div class="vertical nocturne">
+          <div class="visit-card">
             <h1 class="somos-incept">Somos Incept </h1>
             <div class="col-lg-4 mx-auto">
               <p class="txt-init">Criativa e socialmente consciente, 
