Centralizando Somos Incept

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             
           </div>
         </div>
-        <div class="deslizeposition">
+        <div class="deslizeposition nocturne">
           <div class="deslizecont">
             <p class="deslize">DESLIZE</p>
             <svg class="seta" xmlns="http://www.w3.org/2000/svg" width="16" height="152" viewBox="0 0 16 152" fill="none">
@@ -157,9 +157,9 @@
             <div class="col-lg-3 p-4 m-0">
             <p class="pretitulo">O QUE FAZEMOS?</p>
             <h2 class="titulo-left"> OFERECEMOS SERVIÇOS CRIATIVOS</h2>
-            <p class="subtitulo-left">Te ajudamos a impulsionar sua marca do zero (ou
-              do cinco). <br>Alcance clientes com recursos atuais através de
-              nossa consultoria online e completa.
+            <p class="subtitulo-left">Soluções <span>sob medida</span> que impulsionam sua empresa. 
+              Combinamos criatividade e técnica para construir <span>marcas fortes</span>, 
+              campanhas impactantes e soluções digitais eficazes.
             </p>
             </div>
             <div class="col-lg-9 col-sm-12 col-12" style="margin: 0px !important;">
@@ -388,15 +388,11 @@
                     <p class="tipoplanos">mensalidade</p>
                   </div>
                   <ol class="card-body contentplanos">
-                    <li>Conteúdo do Card 1. Este é o primeiro parágrafo.</li>
-                    <li>Este é o segundo parágrafo do Card 1.</li>
-                    <li>Terceiro parágrafo do Card 1.</li>
-                    <li>Conteúdo do Card 1. Este é o primeiro parágrafo.</li>
-                    <li>Este é o segundo parágrafo do Card 1.</li>                      
-                    <li>Ultimo</li>
-                    <li>Conteúdo do Card 1. Este é o primeiro parágrafo.</li>
-                    <li>Este é o segundo parágrafo do Card 1.</li>                      
-                    <li>Ultimo</li>
+                    <li>Organização das redes sociais;</li>
+                    <li>Identidade Visual;</li>
+                    <li>Criação de conteúdo;</li>
+                    <li>Social media;</li>
+                    <li>Primeira campanha de anúncios.</li>
                   </ol>
                   <div class="rodapeplanos">
                     <div class="button-group">
@@ -413,19 +409,17 @@
                 <div class="plano cardplanos efeito-card3">
                   <div class="card-header headplanos">
                     <h3 class="nomeplanos">Intermediário</h3>
-                    <p class="precoplanos">R$ 659,90</p>
+                    <p class="precoplanos">R$ 599,90</p>
                     <p class="tipoplanos">mensalidade</p>
                   </div>
                   <ol class="card-body contentplanos">
-                    <li>Conteúdo do Card 1. Este é o primeiro parágrafo.</li>
-                    <li>Este é o segundo parágrafo do Card 1.</li>
-                    <li>Terceiro parágrafo do Card 1.</li>
-                    <li>Conteúdo do Card 1. Este é o primeiro parágrafo.</li>
-                    <li>Este é o segundo parágrafo do Card 1.</li>                      
-                    <li>Ultimo</li>
-                    <li>Conteúdo do Card 1. Este é o primeiro parágrafo.</li>
-                    <li>Este é o segundo parágrafo do Card 1.</li>                      
-                    <li>Ultimo</li>
+                    <li>Gestão e gerenciamento das redes sociais;</li>
+                    <li>Reuniões e suporte;</li>
+                    <li>Posts ilimitados;</li>
+                    <li>Manutenção do Google Empresas;</li>
+                    <li>Captação de clientes pelo WhatsApp Business;</li>
+                    <li>Criação e gestão de anúncios (Facebook, Instagram e Google ADS);</li>
+                    <li>Social media.</li>
                   </ol>                      
                   <div class="rodapeplanos">
                     <div class="button-group">
@@ -440,19 +434,19 @@
                 <div class="plano cardplanos efeito-card4">
                   <div class="card-header headplanos">
                     <h3 class="nomeplanos">Completo</h3>
-                    <p class="precoplanos">R$ 1.299,90</p>
+                    <p class="precoplanos">R$ 1.499,90</p>
                     <p class="tipoplanos">mensalidade</p>
                   </div>
                   <ol class="card-body contentplanos">
-                    <li>Conteúdo do Card 1. Este é o primeiro parágrafo.</li>
-                    <li>Este é o segundo parágrafo do Card 1.</li>
-                    <li>Terceiro parágrafo do Card 1.</li>
-                    <li>Conteúdo do Card 1. Este é o primeiro parágrafo.</li>
-                    <li>Este é o segundo parágrafo do Card 1.</li>                      
-                    <li>Ultimo</li>
-                    <li>Conteúdo do Card 1. Este é o primeiro parágrafo.</li>
-                    <li>Este é o segundo parágrafo do Card 1.</li>                      
-                    <li>Ultimo</li>
+                    <li>Criação de sites (institucional, e-commerce);</li>
+                    <li>Assistência no site, manutenção e administração;</li>
+                    <li>Gestão e gerenciamento das redes sociais;</li>
+                    <li>Reuniões e suporte;</li>
+                    <li>Posts ilimitados;</li>
+                    <li>Manutenção do Google Empresas;</li>
+                    <li>Captação de clientes pelo WhatsApp Business;</li>
+                    <li>Criação e gestão de anúncios (Facebook, Instagram e Google ADS);</li>
+                    <li>Social media.</li>
                   </ol>                     
                   <div class="rodapeplanos">
                     <div class="button-group">
