--- a/index.html
+++ b/index.html
@@ -119,7 +119,11 @@
         
         <div class="vertical nocturne">
           <div class="visit-card">
-            <h1 class="somos-incept">Somos Incept </h1>
+            <!-- <h1>
+              <span class="somos-incept my-4 mr-4" id="prefix">Somos </span>
+              <span class="somos-incept my-4" id="typing"></span>
+            </h1> -->
+            <h1 class="somos-incept">Somos Incept</h1>
             <div class="col-lg-4 mx-auto">
               <p class="txt-init">Criativa e socialmente consciente, 
                 somos especializados em design estratégico e empresarial.</p>
@@ -127,7 +131,7 @@
             
           </div>
         </div>
-        <div class="deslizeposition nocturne">
+        <div class="deslizeposition">
           <div class="deslizecont">
             <p class="deslize">DESLIZE</p>
             <svg class="seta" xmlns="http://www.w3.org/2000/svg" width="16" height="152" viewBox="0 0 16 152" fill="none">
@@ -157,8 +161,8 @@
             <div class="col-lg-3 p-4 m-0">
             <p class="pretitulo">O QUE FAZEMOS?</p>
             <h2 class="titulo-left"> OFERECEMOS SERVIÇOS CRIATIVOS</h2>
-            <p class="subtitulo-left">Soluções <span>sob medida</span> que impulsionam sua empresa. 
-              Combinamos criatividade e técnica para construir <span>marcas fortes</span>, 
+            <p class="subtitulo-left">Soluções <span class="span-dec">sob medida</span> que impulsionam sua empresa. 
+              Combinamos criatividade e técnica para construir <span class="span-dec">marcas fortes</span>, 
               campanhas impactantes e soluções digitais eficazes.
             </p>
             </div>
@@ -375,7 +379,7 @@
                 <div class="infoplanos efeito-card1 col-lg-3 col-md-12 col-sm-12 mb-5">           
                   <p class="pretitulo-ligth">PLANOS E PREÇOS</p>
                   <h5 class="oferecemosservicos">OFERECEMOS PLANOS ACESSIVEIS E FLEXÍVEIS.</h5>
-                  <p style="color: #fff;">Para um plano personalizado, fale conosco através do <span style="font-weight: bold;">link:</span></p>
+                  <p style="color: #fff;">Para um plano personalizado, fale conosco através do <span class="span-dec">link:</span></p>
                   <a rel="noopener noreferrer" href="https://api.whatsapp.com/send/?phone=5538998604242&text=Olá! Gostaria de um plano personalizado&type=phone_number&app_absent=0" target="_blank">
                     <button class="btnpersona btn-highligth btn" style="width: 250px;">ENTRAR EM CONTATO</button>
                   </a>
@@ -515,7 +519,7 @@
               <div class="slider-thumb"></div>
             </div> -->
             <div class="col-md-10 mx-auto col-lg-5" >
-              <form rel="noopener noreferrer" action="https://formsubmit.co/incepfaleconosco@gmail.com" method="POST" class="formulario-email p-4 p-md-5 rounded-3">
+              <form rel="noopener noreferrer" action="https://formsubmit.co/inceptfaleconosco@gmail.com" method="POST" class="formulario-email p-4 p-md-5 rounded-3">
                 <h2>FALE CONOSCO</h2>
                 <p>Nos envie uma solicitação de contato que te retornamos no mesmo dia.</p>
                 <div class="form-floating mb-3 fall-email">
